syntax = "proto3";
package lsvoucherds;

//import "grpc/proto/entity.proto";

// Ping rpc to check that handler respond
message PingReq {

}
message PingRes {
    string version = 1;
}

// Test rpc
message TestReq {
}
message TestRes {
    bool isValid = 1;
}

// Add upload vouchers rpc
message UploadToPoolReq {
    string region = 1;
    string customerId = 2;
    string poolId = 3;
    string uploadId = 4;
    repeated string vouchers = 5;
}
message UploadToPoolRes {
    int64 totalUpload = 1;
}

// Get pool status rpc
message GetPoolAvailabilityReq {
    string region = 1;
    string customerId = 2;
    repeated string poolIds = 3;
}
message GetPoolAvailabilityRes {
    message GetPoolAvailability {
        int64 total = 1;
        int64 available = 2;
    }

    map<string, GetPoolAvailability> PoolAvailability = 1;
}

// Delete all pool uploads vouchers rpc
message DeletePoolReq {
    string region = 1;
    string customerId = 2;
    string poolId = 3;
}
message DeletePoolRes {

}

// pop voucher from pool list rpc
message PopFromPoolReq {
    string region = 1;
    string customerId = 2;
    string poolId = 3;
}
message PopFromPoolRes {
    string voucher = 1;
}

service Grpc {
    rpc Ping (PingReq) returns (PingRes) {
    }

    rpc Test (TestReq) returns (TestRes) {
    }

    rpc UploadToPool (stream UploadToPoolReq) returns (UploadToPoolRes) {
    }

    rpc GetPoolAvailability (GetPoolAvailabilityReq) returns (GetPoolAvailabilityRes) {
    }

    rpc DeletePool (DeletePoolReq) returns (DeletePoolRes) {
    }

    rpc PopFromPool (PopFromPoolReq) returns (PopFromPoolRes) {
    }
}